# crosscut

./: Cargo.toml  README.md  daily.md
crosscut/: Cargo.toml
crosscut/src/: lib.rs  main.rs  threads.rs
crosscut/src/game_engine/: camera.rs  game.rs  game_engine.rs  mod.rs  renderer.rs  shader.wgsl  start.rs  tests.rs
crosscut/src/game_engine/editor/: input.rs  output.rs
crosscut/src/game_engine/graphics/: background.rs  mod.rs  quads.rs  renderer.rs  shader.wgsl  text.rs
crosscut/src/io/: game_engine.rs  mod.rs  start.rs
crosscut/src/io/editor/: input.rs
crosscut/src/io/terminal/: input.rs
crosscut/src/language/: import.rs  language.rs  mod.rs
crosscut/src/language/code/: changes.rs  codebase.rs  mod.rs  types.rs
crosscut/src/language/compiler/: replace.rs
crosscut/src/language/editor/: editor.rs  input.rs  input_buffer.rs  input_event.rs  mod.rs
crosscut/src/language/runtime/: effect.rs  eval_step.rs  evaluator.rs  intrinsics.rs  mod.rs  node.rs  state.rs  value.rs
crosscut/src/language/tests/: commands.rs  editing.rs  functions.rs  infra.rs
crosscut/src/terminal/: mod.rs  output.rs  thread.rs
crosscut/src/util/: form.rs
prototype/: Cargo.toml
prototype/src/: actor.rs  application.rs  channel.rs  cli.rs  code.rs  editor.rs  game_engine.rs  game_io.rs  host.rs  interpreter.rs  language.rs  main.rs  stdin.rs  thread.rs  threads.rs
prototype/src/code/: model.rs
prototype/src/core/: editor.rs  instance.rs  interpreter.rs  mod.rs  tests.rs
prototype/src/core/code/: body.rs  code.rs  fragments.rs  mod.rs
prototype/src/core/compiler/: compile.rs
prototype/src/core/tests/: host_functions.rs  mod.rs  other.rs  runtime_update.rs  suite.rs
prototype/src/editor/: editor.rs  input.rs  mod.rs  renderer.rs
prototype/src/game_engine/: game_engine.rs  mod.rs  tests.rs
prototype/src/game_engine/editor/: input.rs  output.rs
prototype/src/game_engine/terminal_editor/: input.rs  output.rs
prototype/src/io/: game_engine.rs  mod.rs
prototype/src/io/editor/: input.rs  output.rs  stdin.rs
prototype/src/io/terminal_editor/: input.rs  output.rs
prototype/src/lang/: editor.rs  instance.rs  interpreter.rs  mod.rs
prototype/src/lang/code/: body.rs  code.rs  codebase.rs  errors.rs  fragments.rs  location.rs  mod.rs  replacements.rs
prototype/src/lang/compiler/: compile.rs
prototype/src/lang/tests/: commands.rs  edit.rs  host_functions.rs  intrinsic_functions.rs  mod.rs  other.rs  runtime_update.rs
prototype/src/language/: code.rs  compiler.rs  editor.rs  host.rs  instance.rs  interpreter.rs  mod.rs  other.rs  tests.rs
prototype/src/language/code/: body.rs  changes.rs  (+14 more)
(+856 files in other folders)
