[workspace]
members = ["tools/daily", "tools/website"]

[package]
name = "crosscut"
edition = "2021"

[dependencies]
anyhow = "*"
base64 = "*"
crossbeam-channel = "*"
crossterm = "*"
itertools = "*"
pollster = "*"
pretty_assertions = "*"
thiserror = "*"
wgpu = "*"
winit = "*"

[dependencies.blake3]
version = "*"
features = ["traits-preview"]

[dependencies.udigest]
version = "*"
features = ["derive"]
