[workspace]
members = ["tools/daily", "tools/website"]

[package]
name = "crosscut"
edition = "2024"

[dependencies]
anyhow = "*"
base64 = "*"
crossbeam-channel = "*"
crossterm = "*"
itertools = "*"
panic-message = "*"
pollster = "*"
thiserror = "*"
wgpu = "*"
winit = "*"

[dependencies.blake3]
version = "*"
features = ["traits-preview"]

[dependencies.udigest]
version = "*"
features = ["derive"]

# Pin transitive dependency due to this bug:
# https://github.com/Smithay/wayland-rs/issues/809
#
# Once that is addressed, this whole dependency can be removed.
[dependencies.wayland-backend]
version = "=0.3.8"
