[package]
name = "crosscut"
edition = "2024"

[dependencies]
anyhow = "*"
async-trait = "*"
base64 = "*"
crossbeam-channel = "*"
crossterm = "*"
itertools = "*"
panic-message = "*"
pollster = "*"
thiserror = "*"
wgpu = "*"
winit = "*"

[dependencies.blake3]
version = "*"
features = ["traits-preview"]

[dependencies.bytemuck]
version = "*"
features = ["derive"]

[dependencies.udigest]
version = "*"
features = ["derive"]
