[workspace]

[package]
name = "crosscut"
edition = "2021"

[dependencies]
anyhow = "*"
base64 = "*"
crossterm = "*"
itertools = "*"
pollster = "*"
pretty_assertions = "*"
wgpu = "*"
winit = "*"

[dependencies.blake3]
version = "*"
features = ["traits-preview"]

[dependencies.udigest]
version = "*"
features = ["derive"]
