[workspace]

[package]
name = "crosscut"
edition = "2021"

[dependencies]
anyhow = "*"
crossbeam-channel = "*"
crossterm = "*"
pollster = "*"
thiserror = "*"
wgpu = "*"
winit = "*"

[dependencies.blake3]
version = "*"
features = ["traits-preview"]

[dependencies.udigest]
version = "*"
features = ["derive"]
